--- a/dependencies/pyproject.toml
+++ b/dependencies/pyproject.toml
@@ -1,10 +1,12 @@
 [tool.poetry]
-name = "discordpy-bot-template-with-commands-extension"
+name = "Dank arena bot"
 version = "0.1.0"
-description = ""
-authors = ["Your Name <you@example.com>"]
+description = "Dank arena bot"
+authors = ["L4xus <L4xus@jk.com>"]
+Email = "blzzardst0rm@gmail.com"
 
 [tool.poetry.dependencies]
+# meet these
 python = "^3.8"
 "discord.py" = "^1.3.4"
 flask = "^1.1.2"
